package model;


public interface NamedElement {

	public void setName(String name);
	public String getName();

}
